--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+@import "partials/_reset.scss";
 @import "partials/mixins/_buttons.scss";
 @import "partials/mixins/_tab-focus.scss";
 @import "partials/mixins/_vendor-prefixes.scss";
